Fix,Docs/그룹 전체, 조건 조회 API 응답 변경 및 명세 (#71)
1. 참여자 제외
2. 스터디(식별자, 이름, 카테고리) 추가